code BE này đồng bộ vs BE
